[metadata]
author = Jacob Hansen
author_email = jjhansen1999@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = Architecture Helper for Python
download_url = https://github.com/jacobjhansen/archstart/releases/latest
keywords = python, architecture, start, jumpstart
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Jacob Hansen
maintainer_email = jjhansen1999@gmail.com
name = archstart
platforms =
    Linux
    MacOS
    Windows
url = https://github.com/jacobjhansen/archstart
version = attr: archstart.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
